--- a/Merge/teenkiri/src/main/resources/application.yml
+++ b/Merge/teenkiri/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 server:
-  port: 8088
+  port: 8081
 spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
@@ -24,3 +23,37 @@ spring:
     multipart:
       maxFileSize: 5120MB # 최대 5GB
       maxRequestSize: 5120MB # 최대 5GB
+
+
+  # Email settings
+  mail:
+    host: smtp.google.com
+    port: 587
+    username: dldpsk122212@gmail.com
+    password: xzvr vxlv frlj zyxz
+    properties:
+      mail:
+        transport:
+          protocol: smtp
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+        debug: true
+
+  redis:
+    host: localhost
+    port: 6379
+    #password: 1234
+
+  jwt:
+    secret: secret_key
+    expiration: 86400000  # 1 day in milliseconds
+
+logging:
+  level:
+    root: INFO
+    com.beyond.teenkiri: DEBUG
+  file:
+    name: application.log
+
