--- a/teenkiri/src/main/resources/application.yml
+++ b/teenkiri/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     database-platform: org.hibernate.dialect.MariaDBDialect
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
 
   servlet:
