--- a/code/teenkiri/src/main/resources/application.yml
+++ b/code/teenkiri/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/teenkiri
+    url: jdbc:mariadb://localhost:3307/teenkiri
     username: root
     password: 1234
 
@@ -16,7 +16,7 @@ spring:
     database-platform: org.hibernate.dialect.MariaDBDialect
     generate-ddl: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
 
   servlet:
@@ -61,9 +61,9 @@ logging:
 cloud:
   aws:
     credentials:
-      access-key: aaaaaax
-      secret-key: aaaaaaa
+      access-key: AKIATCKAOYU77ABTNHMH
+      secret-key: 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
     region:
-      static: aaaa
+      static: ap-southeast-2
     s3:
-      bucket: aaa
+      bucket: ynlee-file
